feat: Implement comprehensive tag management system and enhance dive site functionality
Major Features Added:
- Tag Management System: Complete CRUD operations for dive site tags/labels
- Tag Display: Show tags in dive site details page with blue badges
- Multiple Tag Selection: Checkbox interface for selecting multiple tags in edit forms
- Bulk Tag Operations: Add/remove all tags at once when saving changes
- Tag Creation: Admins/moderators can create new tags with descriptions

Technical Improvements:
- Database Schema: Added available_tags and dive_site_tags tables
- Backend API: New /api/v1/tags/ endpoints for tag management
- Frontend Components: Enhanced EditDiveSite with tag selection interface
- State Management: Proper tag state handling with React Query
- Error Handling: Comprehensive error handling for tag operations

User Experience Enhancements:
- Visual Tag Display: Tags shown as colored badges in dive site details
- Intuitive Selection: Checkbox interface for easy multiple tag selection
- Immediate Feedback: Visual feedback for selected tags and operations
- Efficient Workflow: Bulk operations reduce API calls and improve UX

Testing & Documentation:
- Updated design_doc.md with tag management features
- Enhanced README.md with comprehensive API documentation
- Updated TESTING_STRATEGY.md with tag testing guidelines
- All validation and regression tests passing

Files Modified:
- Backend: auth.py, main.py, models.py, schemas.py, dive_sites.py, tags.py (new)
- Frontend: DiveSiteDetail.js, EditDiveSite.js, DivingCenterDetail.js, EditDivingCenter.js, DivingCenters.js
- Database: init.sql with tag tables
- Documentation: design_doc.md, README.md, TESTING_STRATEGY.md
- Testing: test_regressions.js with enhanced validation

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,9 @@ dump.rdb
 
 # Local development
 .local/ 
+
+# Temporary import scripts (agent-created)
+backend/import_kml_dive_sites.py
+backend/update_dive_site_tags.py
+backend/doc.kml 
+map/
