--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     container_name: divemap_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
       MYSQL_DATABASE: divemap
-      MYSQL_USER: divemap_user
-      MYSQL_PASSWORD: divemap_password
+      MYSQL_USER: ${MYSQL_USER:-divemap_user}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-divemap_password}
     ports:
       - "3306:3306"
     volumes:
@@ -18,6 +18,9 @@ services:
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - divemap_network
+    security_opt:
+      - no-new-privileges:true
+    read_only: false
 
   # Redis Cache
   redis:
@@ -30,6 +33,9 @@ services:
       - redis_data:/data
     networks:
       - divemap_network
+    security_opt:
+      - no-new-privileges:true
+    command: redis-server --requirepass ${REDIS_PASSWORD:-redis_password}
 
   # RabbitMQ (for Celery)
   rabbitmq:
@@ -37,8 +43,8 @@ services:
     container_name: divemap_rabbitmq
     restart: always
     environment:
-      RABBITMQ_DEFAULT_USER: divemap
-      RABBITMQ_DEFAULT_PASS: divemap_password
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-divemap}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-divemap_password}
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -46,6 +52,8 @@ services:
       - rabbitmq_data:/var/lib/rabbitmq
     networks:
       - divemap_network
+    security_opt:
+      - no-new-privileges:true
 
   # Backend API
   backend:
@@ -57,12 +65,13 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=mysql+pymysql://divemap_user:divemap_password@db:3306/divemap
-      - REDIS_URL=redis://redis:6379
-      - RABBITMQ_URL=amqp://divemap:divemap_password@rabbitmq:5672/
-      - SECRET_KEY=your-secret-key-change-in-production
+      - DATABASE_URL=mysql+pymysql://${MYSQL_USER:-divemap_user}:${MYSQL_PASSWORD:-divemap_password}@db:3306/divemap
+      - REDIS_URL=redis://:${REDIS_PASSWORD:-redis_password}@redis:6379
+      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-divemap}:${RABBITMQ_PASSWORD:-divemap_password}@rabbitmq:5672/
+      - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
+      - ENVIRONMENT=${ENVIRONMENT:-development}
     volumes:
       - ./backend:/app
       - ./uploads:/app/uploads
@@ -72,6 +81,9 @@ services:
       - rabbitmq
     networks:
       - divemap_network
+    security_opt:
+      - no-new-privileges:true
+    read_only: false
 
   # Frontend
   frontend:
@@ -86,11 +98,14 @@ services:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      - REACT_APP_API_URL=http://localhost:8000
+      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:8000}
+      - NODE_ENV=${NODE_ENV:-development}
     depends_on:
       - backend
     networks:
       - divemap_network
+    security_opt:
+      - no-new-privileges:true
 
   # Celery Worker
   celery_worker:
@@ -101,10 +116,11 @@ services:
     restart: always
     command: celery -A app.celery worker --loglevel=info
     environment:
-      - DATABASE_URL=mysql+pymysql://divemap_user:divemap_password@db:3306/divemap
-      - REDIS_URL=redis://redis:6379
-      - RABBITMQ_URL=amqp://divemap:divemap_password@rabbitmq:5672/
-      - SECRET_KEY=your-secret-key-change-in-production
+      - DATABASE_URL=mysql+pymysql://${MYSQL_USER:-divemap_user}:${MYSQL_PASSWORD:-divemap_password}@db:3306/divemap
+      - REDIS_URL=redis://:${REDIS_PASSWORD:-redis_password}@redis:6379
+      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-divemap}:${RABBITMQ_PASSWORD:-divemap_password}@rabbitmq:5672/
+      - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
+      - ENVIRONMENT=${ENVIRONMENT:-development}
     volumes:
       - ./backend:/app
       - ./uploads:/app/uploads
@@ -114,6 +130,9 @@ services:
       - rabbitmq
     networks:
       - divemap_network
+    security_opt:
+      - no-new-privileges:true
+    read_only: false
 
 volumes:
   mysql_data:
