--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,5 +47,10 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11"
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31",
+    "svgo": "^3.0.2"
   }
 } 
