feat: Implement Google OAuth authentication and mass delete functionality
- Add Google OAuth 2.0 integration with backend token verification
- Implement mass delete functionality for all admin management pages
- Add comprehensive documentation updates (README, API_CHANGELOG, CHANGELOG, design_doc)
- Fix frontend linting issues and missing imports
- Update database schema with google_id field
- Add Google OAuth setup guide and environment configuration
- Enhance toast notifications and layout improvements
- Fix container rebuild issues and dependency conflicts

Backend Changes:
- Add google_auth.py with token verification and user management
- Update User model with google_id field
- Add Google OAuth endpoint to auth router
- Update requirements.txt with Google OAuth dependencies
- Add database migration for google_id field

Frontend Changes:
- Add Google Identity Services integration
- Implement Google Sign-In buttons on login/register pages
- Add mass delete functionality to all admin pages
- Fix missing icon imports and useEffect dependencies
- Update toast notifications positioning and duration
- Improve layout with fixed navbar and responsive design

Documentation:
- Create comprehensive CHANGELOG.md
- Update API_CHANGELOG.md with new endpoints
- Update README.md with Google OAuth features
- Update design_doc.md with recent enhancements
- Add GOOGLE_OAUTH_SETUP.md guide

Security:
- Secure token verification with Google's servers
- Rate limiting on OAuth endpoints
- Protection against deleting used tags and self-deletion
- Enhanced authentication and authorization

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "lucide-react": "^0.263.1",
-    "ol": "^8.2.0"
+    "ol": "^8.2.0",
+    "@react-oauth/google": "^0.12.1"
   },
   "scripts": {
     "start": "react-scripts start",
