--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,4 +16,9 @@ email-validator==2.1.0
 pydantic[email]==2.5.0
 # Security additions
 slowapi==0.1.9
-python-multipart==0.0.20 
+python-multipart==0.0.20
+# Google OAuth
+google-auth==2.40.3
+google-auth-oauthlib==1.2.2
+# Fix dependency conflicts
+pyasn1==0.4.8 
