--- a/env.example
+++ b/env.example
@@ -28,6 +28,11 @@ REACT_APP_API_URL=http://localhost:8000
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 ALGORITHM=HS256
 
+# Google OAuth Configuration
+# Get these from Google Cloud Console: https://console.cloud.google.com/
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+
 # Production Settings (uncomment for production)
 # ENVIRONMENT=production
 # NODE_ENV=production
