feat: Add Alembic database migration system and comprehensive cursor rules
Database Migration System:
- Add complete Alembic integration for version-controlled database changes
- Create automatic migration execution before application startup
- Add database health checks and environment compatibility
- Include rollback support and migration history tracking
- Fix asdf Python environment compatibility with proper PYTHONPATH

Files Added:
- .cursorrules - Comprehensive project rules and best practices
- backend/alembic.ini - Alembic configuration
- backend/migrations/env.py - Environment configuration
- backend/migrations/script.py.mako - Migration template
- backend/migrations/versions/0001_initial.py - Initial database schema
- backend/run_migrations.py - Migration execution script
- backend/create_migration.py - Migration generation script
- backend/run_migrations_docker.sh - Docker migration script
- backend/MIGRATIONS_README.md - User guide for migrations
- backend/ALEMBIC_SETUP.md - Comprehensive setup documentation

Files Modified:
- backend/app/database.py - Add get_database_url() function
- backend/requirements.txt - Add Alembic dependency
- backend/Dockerfile - Update to run migrations before startup
- design_doc.md - Add database migration system documentation
- README.md - Add Alembic to tech stack and migration instructions
- CHANGELOG.md - Document migration system as major feature
- API_CHANGELOG.md - Add migration system to API documentation
- TESTING_STRATEGY.md - Add migration testing and environment rules

Cursor Rules:
- Enforce virtual environment usage for Python development
- Mandate Alembic for all database schema changes
- Prevent automatic git commits (user permission required)
- Require testing in virtual environments
- Include comprehensive compliance checklist

Migration Features:
- Automatic execution before backend startup
- Database health checks and availability verification
- Environment compatibility (development and Docker)
- Full m

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ email-validator==2.1.0
 pydantic[email]==2.5.0
 # Security additions
 slowapi==0.1.9
+alembic==1.16.4
 python-multipart==0.0.20
 # Google OAuth
 google-auth==2.40.3
