--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,38 +22,38 @@ services:
       - no-new-privileges:true
     read_only: false
 
-  # Redis Cache
-  redis:
-    image: redis:7-alpine
-    container_name: divemap_redis
-    restart: always
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - divemap_network
-    security_opt:
-      - no-new-privileges:true
-    command: redis-server --requirepass ${REDIS_PASSWORD:-redis_password}
+  # Redis Cache (disabled - not used yet)
+  # redis:
+  #   image: redis:7-alpine
+  #   container_name: divemap_redis
+  #   restart: always
+  #   ports:
+  #     - "6379:6379"
+  #   volumes:
+  #     - redis_data:/data
+  #   networks:
+  #     - divemap_network
+  #   security_opt:
+  #     - no-new-privileges:true
+  #   command: redis-server --requirepass ${REDIS_PASSWORD:-redis_password}
 
-  # RabbitMQ (for Celery)
-  rabbitmq:
-    image: rabbitmq:3-management
-    container_name: divemap_rabbitmq
-    restart: always
-    environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-divemap}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-divemap_password}
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq
-    networks:
-      - divemap_network
-    security_opt:
-      - no-new-privileges:true
+  # RabbitMQ (for Celery) (disabled - not used yet)
+  # rabbitmq:
+  #   image: rabbitmq:3-management
+  #   container_name: divemap_rabbitmq
+  #   restart: always
+  #   environment:
+  #     RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-divemap}
+  #     RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-divemap_password}
+  #   ports:
+  #     - "5672:5672"
+  #     - "15672:15672"
+  #   volumes:
+  #     - rabbitmq_data:/var/lib/rabbitmq
+  #   networks:
+  #     - divemap_network
+  #   security_opt:
+  #     - no-new-privileges:true
 
   # Backend API
   backend:
@@ -66,8 +66,6 @@ services:
       - "8000:8000"
     environment:
       - DATABASE_URL=mysql+pymysql://${MYSQL_USER:-divemap_user}:${MYSQL_PASSWORD:-divemap_password}@db:3306/divemap
-      - REDIS_URL=redis://:${REDIS_PASSWORD:-redis_password}@redis:6379
-      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-divemap}:${RABBITMQ_PASSWORD:-divemap_password}@rabbitmq:5672/
       - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
@@ -77,8 +75,6 @@ services:
       - ./uploads:/app/uploads
     depends_on:
       - db
-      - redis
-      - rabbitmq
     networks:
       - divemap_network
     security_opt:
@@ -107,37 +103,35 @@ services:
     security_opt:
       - no-new-privileges:true
 
-  # Celery Worker
-  celery_worker:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: divemap_celery_worker
-    restart: always
-    command: celery -A app.celery worker --loglevel=info
-    environment:
-      - DATABASE_URL=mysql+pymysql://${MYSQL_USER:-divemap_user}:${MYSQL_PASSWORD:-divemap_password}@db:3306/divemap
-      - REDIS_URL=redis://:${REDIS_PASSWORD:-redis_password}@redis:6379
-      - RABBITMQ_URL=amqp://${RABBITMQ_USER:-divemap}:${RABBITMQ_PASSWORD:-divemap_password}@rabbitmq:5672/
-      - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
-      - ENVIRONMENT=${ENVIRONMENT:-development}
-    volumes:
-      - ./backend:/app
-      - ./uploads:/app/uploads
-    depends_on:
-      - db
-      - redis
-      - rabbitmq
-    networks:
-      - divemap_network
-    security_opt:
-      - no-new-privileges:true
-    read_only: false
+  # Celery Worker (disabled - not used yet)
+  # celery_worker:
+  #   build:
+  #     context: ./backend
+  #     dockerfile: Dockerfile
+  #   container_name: divemap_celery_worker
+  #   restart: always
+  #   command: celery -A app.celery worker --loglevel=info
+  #   environment:
+  #     - DATABASE_URL=mysql+pymysql://${MYSQL_USER:-divemap_user}:${MYSQL_PASSWORD:-divemap_password}@db:3306/divemap
+  #     - REDIS_URL=redis://:${REDIS_PASSWORD:-redis_password}@redis:6379
+  #     - RABBITMQ_URL=amqp://${RABBITMQ_USER:-divemap}:${RABBITMQ_PASSWORD:-divemap_password}@rabbitmq:5672/
+  #     - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
+  #     - ENVIRONMENT=${ENVIRONMENT:-development}
+  #   volumes:
+  #     - ./backend:/app
+  #     - ./uploads:/app/uploads
+  #   depends_on:
+  #     - db
+  #     - redis
+  #     - rabbitmq
+  #   networks:
+  #     - divemap_network
+  #   security_opt:
+  #     - no-new-privileges:true
+  #   read_only: false
 
 volumes:
   mysql_data:
-  redis_data:
-  rabbitmq_data:
 
 networks:
   divemap_network:
