feat: Complete Fly.io production deployment with authentication fixes
🚀 Production Deployment:
- Added Fly.io configuration files for backend, frontend, and database
- Deployed multi-service architecture with internal networking
- Configured persistent storage for database and uploads
- Implemented proper secret management with fly secrets

🔧 Backend Changes:
- Updated CORS configuration for production domains
- Fixed database query optimization in tags router
- Enhanced Dockerfile with automatic migrations
- Added proper environment variable handling

🔧 Frontend Changes:
- Fixed API endpoint trailing slash inconsistencies across all pages
- Added conditional Google OAuth rendering
- Updated Dockerfile for build-time environment variables
- Fixed authentication flow and admin page access

🔧 Database Changes:
- Updated init.sql with complete schema including all migrations
- Removed obsolete add_currency_fields.sql
- Added sample data structure for database export

📝 Documentation Updates:
- Updated CHANGELOG.md with comprehensive deployment details
- Updated API_CHANGELOG.md with endpoint fixes and optimizations
- Updated README.md with live application information
- Added production URLs and demo credentials

🐛 Bug Fixes:
- Fixed immediate logout after authentication
- Resolved admin pages not displaying content
- Fixed API communication issues with 307 redirects
- Optimized database queries to prevent internal server errors

✅ Status: Application now live at https://divemap.fly.dev

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,14 +20,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Create uploads directory
-RUN mkdir -p /app/uploads
-
-# Expose port
-EXPOSE 8000
+RUN mkdir -p uploads
 
 # Make migration scripts executable
 RUN chmod +x /app/run_migrations.py
 RUN chmod +x /app/run_migrations_docker.sh
 
+# Expose port
+EXPOSE 8000
+
 # Run migrations and then start the application
-CMD ["sh", "-c", "python run_migrations.py && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"] 
+CMD ["sh", "-c", "python run_migrations.py && uvicorn app.main:app --host 0.0.0.0 --port 8000"] 
