--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,35 @@
-FROM node:18-alpine
+# Build stage
+FROM node:18-alpine as build
 
-# Set working directory
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm ci --omit=dev
 
 # Copy source code
 COPY . .
 
-# Expose port
-EXPOSE 3000
+# Build the app with environment variables
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=${REACT_APP_API_URL}
+RUN npm run build
 
-# Start the application
-CMD ["npm", "start"] 
+# Production stage
+FROM node:18-alpine
+
+WORKDIR /app
+
+# Install serve globally
+RUN npm install -g serve
+
+# Copy built app from build stage
+COPY --from=build /app/build ./build
+
+# Expose port
+EXPOSE 8080
+
+# Start the app
+CMD ["serve", "-s", "build", "-l", "8080"] 
