--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,28 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "react-router-dom": "^6.8.1",
-    "axios": "^1.3.4",
-    "react-query": "^3.39.3",
-    "react-hook-form": "^7.43.5",
-    "react-hot-toast": "^2.4.0",
-    "tailwindcss": "^3.2.7",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.31",
+    "axios": "^1.3.4",
     "lucide-react": "^0.263.1",
     "ol": "^8.2.0",
-    "@react-oauth/google": "^0.12.1"
+    "postcss": "^8.4.31",
+    "puppeteer": "^21.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-hot-toast": "^2.4.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:e2e": "node tests/run_frontend_tests.js",
+    "test:frontend": "node tests/test_frontend.js",
+    "test:validation": "node tests/validate_frontend.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -56,4 +60,4 @@
     "webpack-dev-server": "^5.0.0",
     "resolve-url-loader": "^5.0.0"
   }
-} 
+}
