--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -59,13 +59,14 @@ jobs:
         python -m pytest tests/ -v --cov=app --cov-report=term-missing --cov-report=html --cov-report=xml
 
     - name: Upload coverage reports
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
         file: ./backend/coverage.xml
         directory: ./backend/htmlcov/
         flags: backend
         name: backend-coverage
         fail_ci_if_error: false
+        token: ${{ secrets.CODECOV_TOKEN }}
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
