--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -61,8 +61,7 @@ jobs:
     - name: Upload coverage reports
       uses: codecov/codecov-action@v5
       with:
-        file: ./backend/coverage.xml
-        directory: ./backend/htmlcov/
+        directory: ./backend/
         flags: backend
         name: backend-coverage
         fail_ci_if_error: false
