fix: Add missing React public files and fix .gitignore
- Add frontend/public/index.html, favicon.ico, manifest.json, robots.txt
- Fix .gitignore to not ignore frontend/public directory
- Change from ignoring 'public' to ignoring 'frontend/build/' only
- This resolves the 'Could not find a required file' error in CI

The React app now has all required public files for proper build process.

--- a/.gitignore
+++ b/.gitignore
@@ -111,7 +111,9 @@ dist
 
 # Gatsby files
 .cache/
-public
+
+# React build output (but keep source files)
+frontend/build/
 
 # Storybook build outputs
 .out
