--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -20,6 +20,56 @@ on:
       - 'package-lock.json'
       - 'frontend/package.json'
       - 'frontend/package-lock.json'
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to test against'
+        required: false
+        default: 'ci'
+        type: choice
+        options:
+          - ci
+          - development
+          - staging
+      run_linting:
+        description: 'Run ESLint checks'
+        required: false
+        default: true
+        type: boolean
+      run_unit_tests:
+        description: 'Run unit tests'
+        required: false
+        default: true
+        type: boolean
+      run_integration_tests:
+        description: 'Run integration tests'
+        required: false
+        default: true
+        type: boolean
+      run_accessibility_tests:
+        description: 'Run accessibility tests'
+        required: false
+        default: true
+        type: boolean
+      run_e2e_tests:
+        description: 'Run end-to-end tests'
+        required: false
+        default: true
+        type: boolean
+      run_build_tests:
+        description: 'Run build verification tests'
+        required: false
+        default: true
+        type: boolean
+      node_version:
+        description: 'Node.js version to use'
+        required: false
+        default: '18.x'
+        type: choice
+        options:
+          - '16.x'
+          - '18.x'
+          - '20.x'
 
 jobs:
   test-frontend:
@@ -27,7 +77,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [${{ github.event.inputs.node_version || '18.x' }}]
 
     steps:
       - name: Checkout code
@@ -100,12 +150,14 @@ jobs:
           npm ci --prefer-offline --no-audit --no-fund
 
       - name: Run ESLint checks
+        if: ${{ github.event.inputs.run_linting != 'false' || github.event_name != 'workflow_dispatch' }}
         run: |
           cd frontend
           npx eslint src/ --ext .js,.jsx --max-warnings 0
         continue-on-error: true
 
       - name: Verify React app can build
+        if: ${{ github.event.inputs.run_build_tests != 'false' || github.event_name != 'workflow_dispatch' }}
         run: |
           cd frontend
           CI=false npm run build
@@ -127,6 +179,7 @@ jobs:
         continue-on-error: true
 
       - name: Run unit tests
+        if: ${{ github.event.inputs.run_unit_tests != 'false' || github.event_name != 'workflow_dispatch' }}
         run: |
           cd frontend
           npm test -- --watchAll=false --coverage --passWithNoTests --ci --silent
@@ -192,6 +245,7 @@ jobs:
           REACT_APP_API_URL: "http://localhost:8000"
 
       - name: Run frontend validation tests
+        if: ${{ github.event.inputs.run_accessibility_tests != 'false' || github.event_name != 'workflow_dispatch' }}
         run: |
           cd frontend
           npm run test:validation
@@ -202,6 +256,7 @@ jobs:
         timeout-minutes: 10
 
       - name: Run frontend integration tests
+        if: ${{ github.event.inputs.run_integration_tests != 'false' || github.event_name != 'workflow_dispatch' }}
         run: |
           cd frontend
           npm run test:frontend
@@ -211,6 +266,7 @@ jobs:
         timeout-minutes: 15
 
       - name: Run end-to-end tests
+        if: ${{ github.event.inputs.run_e2e_tests != 'false' || github.event_name != 'workflow_dispatch' }}
         run: |
           cd frontend
           npm run test:e2e
@@ -268,12 +324,14 @@ jobs:
           npm ci --prefer-offline --no-audit --no-fund
 
       - name: Run ESLint checks
+        if: ${{ github.event.inputs.run_linting != 'false' || github.event_name != 'workflow_dispatch' }}
         run: |
           cd frontend
           npx eslint src/ --ext .js,.jsx --max-warnings 0
         continue-on-error: true
 
       - name: Build frontend
+        if: ${{ github.event.inputs.run_build_tests != 'false' || github.event_name != 'workflow_dispatch' }}
         run: |
           cd frontend
           CI=false npm run build
@@ -433,6 +491,7 @@ jobs:
           REACT_APP_API_URL: "http://localhost:8000"
 
       - name: Run accessibility tests
+        if: ${{ github.event.inputs.run_accessibility_tests != 'false' || github.event_name != 'workflow_dispatch' }}
         run: |
           cd frontend
           npm run test:validation
