--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,24 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-oauth/google": "^0.12.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "lucide-react": "^0.263.1",
     "ol": "^8.2.0",
     "postcss": "^8.4.31",
-    "puppeteer": "^21.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.2.7"
+  },
+  "devDependencies": {
+    "puppeteer": "^21.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,10 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
   },
   "overrides": {
     "nth-check": "^2.0.1",
