feat: Add comprehensive newsletter management system with multi-dive trips
- Add newsletter parsing and trip management functionality
- Implement ParsedDive model for multiple dives per trip
- Add newsletter upload, re-parsing, and CRUD operations
- Create admin interface for newsletter management
- Add comprehensive API endpoints for newsletter operations
- Update documentation with newsletter system details
- Add database migrations for ParsedDive and enhanced trip models
- Implement development and production Docker configurations
- Add rate limiting and security enhancements
- Update frontend with newsletter admin interface

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,7 +23,9 @@ google-auth==2.40.3
 google-auth-oauthlib==1.2.2
 # Updated dependencies for security
 starlette==0.47.2
-anyio==4.9.0
+anyio>=3.6.2,<4
 pyasn1==0.6.1
 # Additional security packages
-cryptography==45.0.5 
+cryptography==45.0.5
+# OpenAI integration
+openai==1.98.0 
