--- a/env.example
+++ b/env.example
@@ -44,3 +44,5 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 # 3. Never commit .env file to version control
 # 4. Use different passwords for each service
 # 5. Rotate secrets regularly in production 
+
+OPENAI_API_KEY=your_openai_api_key_goes_here
