Update Docker configuration for Google OAuth support
- Add REACT_APP_GOOGLE_CLIENT_ID environment variable to frontend Dockerfile
- Update docker-compose.yml to use Dockerfile.dev for development
- Update fly.toml to include Google Client ID build argument
- Configure build secrets for production deployment

--- a/frontend/fly.toml
+++ b/frontend/fly.toml
@@ -9,6 +9,7 @@ primary_region = 'fra'
 [build]
   [build.args]
     REACT_APP_API_URL = "https://divemap-backend.fly.dev"
+    # REACT_APP_GOOGLE_CLIENT_ID will be provided via build secrets
 
 [env]
   NODE_ENV = 'production'
