Update CORS configuration for new frontend domain
Make CORS configuration environment-driven.

- Convert hardcoded CORS origins to environment variable ALLOWED_ORIGINS
- Add ALLOWED_ORIGINS to all Docker Compose configurations
- Update environment examples with new domain configuration
- Remove hardcoded production domains from backend code

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,6 +17,7 @@ services:
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
       - ENVIRONMENT=development
       - OPENAI_API_KEY=${OPENAI_API_KEY:-foobar}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-http://localhost:3000,http://127.0.0.1:3000}
     volumes:
       - ./backend:/app
       - ./uploads:/app/uploads
