--- a/env.example
+++ b/env.example
@@ -38,6 +38,11 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 # NODE_ENV=production
 # REACT_APP_API_URL=https://your-domain.com
 
+# CORS Configuration
+# Comma-separated list of allowed origins for CORS
+# Example: ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+
 # Security Notes:
 # 1. Generate strong passwords using: openssl rand -base64 32
 # 2. Generate JWT secret using: openssl rand -hex 32
