--- a/frontend/env.example
+++ b/frontend/env.example
@@ -13,4 +13,4 @@ REACT_APP_ENVIRONMENT=development
 
 # Production Settings (uncomment for production)
 # REACT_APP_ENVIRONMENT=production
-# REACT_APP_API_URL=https://your-domain.com 
+# REACT_APP_API_URL=https://backend.your-domain.com
