--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,9 @@ jspm_packages/
 # Yarn Integrity file
 .yarn-integrity
 
+# Test database files
+backend/test.db*
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
