--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.3.4",
     "lucide-react": "^0.263.1",
     "ol": "^8.2.0",
+    "playwright": "^1.54.2",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,15 +18,15 @@
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "puppeteer": "^24.15.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-import": "^2.29.1",
     "prettier": "^3.2.5",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3"
+    "puppeteer": "^24.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
