--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.263.1",
     "ol": "^8.2.0",
     "playwright": "^1.54.2",
