--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,26 +6,27 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "fuse.js": "^7.1.0",
-    "lucide-react": "^0.263.1",
-    "ol": "^8.2.0",
+    "lucide-react": "^0.539.0",
+    "ol": "^10.6.1",
     "playwright": "^1.54.2",
     "postcss": "^8.4.31",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@eslint/js": "^9.33.0",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "^3.2.5",
     "puppeteer": "^24.15.0"
   },
