--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,8 +38,12 @@
     "test:e2e": "node tests/run_frontend_tests.js",
     "test:frontend": "node tests/test_frontend.js",
     "test:validation": "node tests/validate_frontend.js",
-    "lint": "eslint src --ext .js,.jsx --max-warnings 0",
-    "lint:fix": "eslint src --ext .js,.jsx --fix",
+    "test:mapview": "node tests/test_map_view_and_proptypes.js",
+    "test:nodejs20": "node tests/test_nodejs_20_upgrade.js",
+    "test:comprehensive": "node tests/run_comprehensive_tests.js",
+    "test:all": "npm run test:nodejs20 && npm run test:mapview && npm run test:validation",
+    "lint": "eslint src --max-warnings 0",
+    "lint:fix": "eslint src --fix",
     "format": "prettier --write \"src/**/*.{js,jsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx,json,css,md}\"",
     "lint:check": "node scripts/lint-check.js",
