Implement comprehensive refresh token system with nginx reverse proxy
This commit implements a complete refresh token authentication system with
automatic token renewal, token rotation, and enhanced security features.
The system is integrated with an nginx reverse proxy to resolve cross-origin
cookie issues and provide a unified development/production architecture.

## Backend Changes

### Core Authentication System
- Add TokenService class for centralized token management
- Implement refresh token endpoints: /refresh, /logout, /tokens
- Add token rotation and revocation capabilities
- Integrate with database models for RefreshToken and AuthAuditLog
- Update auth router with comprehensive refresh token support

### Security Enhancements
- Configure SameSite=strict for all refresh token cookies
- Implement HTTP-only cookie storage for refresh tokens
- Add environment-based secure cookie configuration
- Enable token rotation and audit logging
- Set access token expiration to 15 minutes, refresh tokens to 30 days

### Database & Models
- Add RefreshToken and AuthAuditLog models with proper relationships
- Create migration 0029_refresh_tokens for new tables
- Configure server-side defaults for timestamp fields

## Frontend Changes

### Authentication Context
- Remove proactive token renewal to prevent conflicts with API interceptor
- Clean up unused state variables and timer management
- Integrate with new token service endpoints

### API Integration
- Implement request queuing to prevent multiple simultaneous refresh attempts
- Add automatic token refresh on 401 responses via Axios interceptor
- Configure withCredentials for proper cookie handling
- Remove excessive debug logging

### Environment Configuration
- Update REACT_APP_API_URL to use nginx proxy (http://localhost/)
- Configure for unified origin access through proxy

## Infrastructure Changes

### Nginx Reverse Proxy (nginx/)
- Add nginx/Dockerfile: Custom nginx image removing default config
- Add nginx/dev.c

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,21 @@
 version: '3.8'
 
 services:
+  # Nginx reverse proxy for development
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    container_name: divemap_nginx
+    restart: always
+    ports:
+      - "80:80"
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - divemap_network
+
   # Backend API with development settings
   backend:
     build:
@@ -8,16 +23,24 @@ services:
       dockerfile: Dockerfile
     container_name: divemap_backend
     restart: always
-    ports:
-      - "8000:8000"
+    # No host port mapping - only accessible through nginx
+    ports: []
     environment:
       - DATABASE_URL=mysql+pymysql://${MYSQL_USER:-divemap_user}:${MYSQL_PASSWORD:-divemap_password}@db:3306/divemap
       - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
       - ALGORITHM=HS256
-      - ACCESS_TOKEN_EXPIRE_MINUTES=30
+      - ACCESS_TOKEN_EXPIRE_MINUTES=15
+      - REFRESH_TOKEN_EXPIRE_DAYS=30
+      - REFRESH_TOKEN_COOKIE_SECURE=false
+      - REFRESH_TOKEN_COOKIE_HTTPONLY=true
+      - REFRESH_TOKEN_COOKIE_SAMESITE=lax
+      - ENABLE_TOKEN_ROTATION=true
+      - ENABLE_AUDIT_LOGGING=true
+      - MAX_ACTIVE_SESSIONS_PER_USER=5
       - ENVIRONMENT=development
       - OPENAI_API_KEY=${OPENAI_API_KEY:-foobar}
-      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-http://localhost:3000,http://127.0.0.1:3000}
+      - CORS_ORIGINS=http://localhost
+      - ALLOWED_ORIGINS=http://localhost
     volumes:
       - ./backend:/app
       - ./uploads:/app/uploads
@@ -37,13 +60,13 @@ services:
       dockerfile: Dockerfile.dev
     container_name: divemap_frontend
     restart: always
-    ports:
-      - "3000:3000"
+    # No host port mapping - only accessible through nginx
+    ports: []
     volumes:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:8000}
+      - REACT_APP_API_URL=http://localhost
       - NODE_ENV=development
     depends_on:
       - backend
@@ -51,4 +74,34 @@ services:
       - divemap_network
     security_opt:
       - no-new-privileges:true
-    read_only: false 
+    read_only: false
+
+  # Database
+  db:
+    build:
+      context: ./database
+      dockerfile: Dockerfile
+    container_name: divemap_db
+    restart: always
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root_password}
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-divemap}
+      - MYSQL_USER=${MYSQL_USER:-divemap_user}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-divemap_password}
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - divemap_network
+    security_opt:
+      - no-new-privileges:true
+    read_only: false
+
+volumes:
+  mysql_data:
+
+networks:
+  divemap_network:
+    driver: bridge 
