--- a/frontend/env.example
+++ b/frontend/env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env and modify with your values
 
 # API Configuration
-REACT_APP_API_URL=http://localhost:8000
+REACT_APP_API_URL=http://localhost/
 
 # Google OAuth Configuration
 # Get these from Google Cloud Console: https://console.cloud.google.com/
