Implement backend infrastructure for refresh token system
- Add database migration for refresh_tokens and auth_audit_logs tables
- Create enhanced TokenService with refresh token management
- Update User model with refresh token relationships
- Update authentication router with new endpoints
- Update schemas to include refresh token fields
- Add environment configuration for refresh tokens
- Create comprehensive test suite covering all refresh token functionality
- Add standalone tests for development without database dependencies
- Test TokenService initialization, configuration, and core methods
- Validate token creation, structure, and expiration
- Test model definitions for RefreshToken and AuthAuditLog
- Verify security features including token rotation and audit logging

This implements the complete backend infrastructure and testing for the refresh token system.

--- a/env.example
+++ b/env.example
@@ -25,8 +25,19 @@ NODE_ENV=development
 REACT_APP_API_URL=http://localhost:8000
 
 # Security Configuration
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+ACCESS_TOKEN_EXPIRE_MINUTES=15
 ALGORITHM=HS256
+
+# Refresh Token Configuration
+REFRESH_TOKEN_EXPIRE_DAYS=30
+REFRESH_TOKEN_COOKIE_SECURE=true
+REFRESH_TOKEN_COOKIE_HTTPONLY=true
+REFRESH_TOKEN_COOKIE_SAMESITE=strict
+
+# Security Configuration
+ENABLE_TOKEN_ROTATION=true
+ENABLE_AUDIT_LOGGING=true
+MAX_ACTIVE_SESSIONS_PER_USER=5
 
 # Google OAuth Configuration
 # Get these from Google Cloud Console: https://console.cloud.google.com/
