Implement frontend refresh token system and complete backend integration
- Enhanced AuthContext with refresh token support and background renewal
- Updated API interceptor to handle automatic token renewal
- Created SessionManager component for session expiration warnings
- Integrated SessionManager into main App component
- Fixed formatting and import order issues
- Implemented comprehensive refresh token system with background renewal
- Added extensive debugging for cookie setting and token refresh
- Created nginx proxy implementation plan for solving cross-origin issues
- Updated documentation and environment configurations
- Fixed database migration conflicts and model defaults
- Added comprehensive test suite for refresh token functionality

This completes the frontend implementation and backend integration for the refresh token system.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,8 @@ services:
     restart: always
     ports:
       - "8000:8000"
+    env_file:
+      - ".env"
     environment:
       - DATABASE_URL=mysql+pymysql://${MYSQL_USER:-divemap_user}:${MYSQL_PASSWORD:-divemap_password}@db:3306/divemap
       - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
