--- a/env.example
+++ b/env.example
@@ -28,11 +28,11 @@ REACT_APP_API_URL=http://localhost:8000
 ACCESS_TOKEN_EXPIRE_MINUTES=15
 ALGORITHM=HS256
 
-# Refresh Token Configuration
+# Refresh Token Settings
 REFRESH_TOKEN_EXPIRE_DAYS=30
-REFRESH_TOKEN_COOKIE_SECURE=true
+REFRESH_TOKEN_COOKIE_SECURE=false  # Set to true in production (HTTPS)
 REFRESH_TOKEN_COOKIE_HTTPONLY=true
-REFRESH_TOKEN_COOKIE_SAMESITE=strict
+REFRESH_TOKEN_COOKIE_SAMESITE=lax  # Allow cross-origin cookies
 
 # Security Configuration
 ENABLE_TOKEN_ROTATION=true
